<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="100dp"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEventHolder"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_event_name"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/saveEditedEventButton"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/editEventHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_edit"
        android:layout_marginStart="40dp" />

    <Button
        android:id="@+id/deleteEventButton"
        android:layout_toRightOf="@id/saveEditedEventButton"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/editEventHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_event"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/saveEditedEventButton" />
</RelativeLayout>